--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 FLASK_APP=app
 FLASK_RUN=development
-DATABASE_URI=postgresql://iiyfaqnv:Fpoi3_aw3LisDfsEAFJaECgWlyGnkDpW@heffalump.db.elephantsql.com/iiyfaqnv
+DATABASE_URI=postgresql://saxoulkv:Z5AOAUjmB_jB5SjjAjAVYzrjGroiFaMR@heffalump.db.elephantsql.com/saxoulkv
